Gruvbox theme and extension

--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body class="dark-mode">
+<body>
 
 	<div class="main">
 
 		<div class="container">
 
 			<div class="header">
-				<h1><span id="welcome-message">Good afternoon</span></h1>
-				<h2><span id="time">22:41:01</span></h2>
-				<h3><span id="date">Thursday, January 24</span></h3>
+				<h2 class="clock"><span id="clock">00:00:00</span></h2>
+				<h3 class="date"><span id="date">Thursday, January 24</span></h3>
+			</div>
+
+			<div class="search-input-wrapper">
+				<input class="search-input" id="search" type="text" />
+			</div>
+
+			<div class="shortcut-sections" id="shortcut-sections">
+
 			</div>
 
 		</div>
