--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>New Tab</title>
 
 	<meta charset="utf-8">
+	<meta name="theme-color" content="#7c6f64">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
 	<link rel="icon" href="data:,">
